--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <link rel="apple-touch-icon" href="public/app_icon/apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="public/app_icon/mask-icon.svg" color="#FFFFFF" />
+    <!-- MazdaFont import  -->
+    <link
+      href="https://db.onlinewebfonts.com/c/7196ac7bbe07eb77290c0e71f4310b34?family=Mazda+Type+Regular"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
