feat: フッターの効果を追加

--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Mazda Driver Identity</title>
     <link rel="apple-touch-icon" href="public/app_icon/apple-touch-icon.png" sizes="180x180" />
     <link rel="mask-icon" href="public/app_icon/mask-icon.svg" color="#FFFFFF" />
     <!-- MazdaFont import  -->
@@ -11,6 +11,8 @@
       href="https://db.onlinewebfonts.com/c/7196ac7bbe07eb77290c0e71f4310b34?family=Mazda+Type+Regular"
       rel="stylesheet"
     />
+    <!-- theme color -->
+    <meta name="theme-color" content="#808080" />
   </head>
   <body>
     <div id="root"></div>
